sfdx-source/dx-training/main/objects/Account/Account.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>