sfdx-source/dx-training/main/objects/Account/fields/Address_Blank_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Address_Blank_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Blank Checkbox</label>
    <type>Checkbox</type>
</CustomField>