sfdx-source/dx-training/main/objects/Account/fields/Address_Blank_Reason__c.field-meta.xml
<CustomField>
    <fullName>Address_Blank_Reason__c</fullName>
    <label>Address Blank Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>