sfdx-source/dx-training/main/objects/Account/fields/Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Address_Type__c</fullName>
    <label>Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>