sfdx-source/dx-training/main/objects/Account/fields/Address_Verified__c.field-meta.xml
<CustomField>
    <fullName>Address_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Verified</label>
    <type>Checkbox</type>
</CustomField>