sfdx-source/dx-training/main/objects/Account/fields/Address_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Address_Verified_Date__c</fullName>
    <label>Address Verified Date</label>
    <type>Date</type>
</CustomField>