sfdx-source/dx-training/main/objects/Account/fields/Address_Verified_Days_Past__c.field-meta.xml
<CustomField>
    <fullName>Address_Verified_Days_Past__c</fullName>
    <formula>TODAY() -  Address_Verified_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Verified Days Past</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>