sfdx-source/dx-training/main/objects/Account/fields/ADT_Allowed_Patient_Classes__c.field-meta.xml
<CustomField>
    <fullName>ADT_Allowed_Patient_Classes__c</fullName>
    <label>ADT Allowed Patient Classes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>