sfdx-source/dx-training/main/objects/Account/fields/Aliases__c.field-meta.xml
<CustomField>
    <fullName>Aliases__c</fullName>
    <label>Aliases</label>
    <type>TextArea</type>
</CustomField>