sfdx-source/dx-training/main/objects/Account/fields/Applicant_Questions__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Questions__c</fullName>
    <label>Submitter Questions</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>