sfdx-source/dx-training/main/objects/Account/fields/Appointment_Phone__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Phone__c</fullName>
    <label>Appointment Phone</label>
    <length>128</length>
    <type>Text</type>
</CustomField>