sfdx-source/dx-training/main/objects/Account/fields/Associated_Bill_Area_IDs__c.field-meta.xml
<CustomField>
    <fullName>Associated_Bill_Area_IDs__c</fullName>
    <label>Associated Bill Burr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>