sfdx-source/dx-training/main/objects/Account/fields/Associated_Bill_Areas_Name__c.field-meta.xml
<CustomField>
    <fullName>Associated_Bill_Areas_Name__c</fullName>
    <label>Associated Bill Areas Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>