sfdx-source/dx-training/main/objects/Account/fields/Billing_Street_Formula__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street_Formula__c</fullName>
    <formula>BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Street Formula</label>
    <type>Text</type>
</CustomField>