sfdx-source/dx-training/main/objects/Account/fields/BMI__c.field-meta.xml
<CustomField>
    <fullName>BMI__c</fullName>
    <label>BMI</label>
    <length>80</length>
    <type>Text</type>
</CustomField>