sfdx-source/dx-training/main/objects/Account/fields/Break_the_Glass__c.field-meta.xml
<CustomField>
    <fullName>Break_the_Glass__c</fullName>
    <formula>IF( OR(FYI_Flag__c = &quot;Patient Hard Lock (1016)&quot;,FYI_Flag__c = &quot;Encounter Hard Lock (1017)&quot;), &quot;Hard Lock&quot;, IF( OR(ISPICKVAL(PatientType__c , &quot;VIP&quot;) , NOT( ISBLANK(Confidential_Name__c) ) ) , &quot;Break the Glass&quot;, &quot;None&quot;) )</formula>
    <label>Break the Glass</label>
    <type>Text</type>
</CustomField>