sfdx-source/dx-training/main/objects/Account/fields/Centers_Dismissed__c.field-meta.xml
<CustomField>
    <fullName>Centers_Dismissed__c</fullName>
    <label>Centers Dismissed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>