sfdx-source/dx-training/main/objects/Account/fields/CFS_Referral_Status__c.field-meta.xml
<CustomField>
    <fullName>CFS_Referral_Status__c</fullName>
    <label>CFS Referral Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>