sfdx-source/dx-training/main/objects/Account/fields/Confidential_Name__c.field-meta.xml
<CustomField>
    <fullName>Confidential_Name__c</fullName>
    <label>Confidential Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>