sfdx-source/dx-training/main/objects/Account/fields/Considering_Attending__c.field-meta.xml
<CustomField>
    <fullName>Considering_Attending__c</fullName>
    <label>Considering Attending</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>This Month</fullName>
            </value>
            <value>
                <fullName>1-2 Months</fullName>
            </value>
            <value>
                <fullName>3-6 Months</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>