sfdx-source/dx-training/main/objects/Account/fields/Contact_Info_Verified_Days_Past__c.field-meta.xml
<CustomField>
    <fullName>Contact_Info_Verified_Days_Past__c</fullName>
    <formula>TODAY() -  Contact_Information_Verified_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Info Verified Days Past</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>