sfdx-source/dx-training/main/objects/Account/fields/Contact_Information_Verified__c.field-meta.xml
<CustomField>
    <fullName>Contact_Information_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Information Verified</label>
    <type>Checkbox</type>
</CustomField>