sfdx-source/dx-training/main/objects/Account/fields/Contact_Information_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Information_Verified_Date__c</fullName>
    <label>Contact Information Verified Date</label>
    <type>Date</type>
</CustomField>