sfdx-source/dx-training/main/objects/Account/fields/Coverage_Verified__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coverage Verified</label>
    <type>Checkbox</type>
</CustomField>