sfdx-source/dx-training/main/objects/Account/fields/Coverage_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Verified_Date__c</fullName>
    <label>Coverage Verified Date</label>
    <type>Date</type>
</CustomField>