sfdx-source/dx-training/main/objects/Account/fields/Current_Case__c.field-meta.xml
<CustomField>
    <fullName>Current_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Current Case</description>
    <label>Current Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Accounts (Current Case)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>