sfdx-source/dx-training/main/objects/Account/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department Specialty</label>
    <length>128</length>
    <type>Text</type>
</CustomField>