sfdx-source/dx-training/main/objects/Account/fields/Department_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Department_Abbreviation__c</fullName>
    <label>Department_Abbreviation</label>
    <length>128</length>
    <type>Text</type>
</CustomField>