sfdx-source/dx-training/main/objects/Account/fields/Department_County__c.field-meta.xml
<CustomField>
    <fullName>Department_County__c</fullName>
    <label>Department County</label>
    <length>128</length>
    <type>Text</type>
</CustomField>