sfdx-source/dx-training/main/objects/Account/fields/Department_External_Name__c.field-meta.xml
<CustomField>
    <fullName>Department_External_Name__c</fullName>
    <label>Department External Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>