sfdx-source/dx-training/main/objects/Account/fields/Department_Synonyms__c.field-meta.xml
<CustomField>
    <fullName>Department_Synonyms__c</fullName>
    <label>Department Synonyms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>