sfdx-source/dx-training/main/objects/Account/fields/Departments_Dismissed__c.field-meta.xml
<CustomField>
    <fullName>Departments_Dismissed__c</fullName>
    <label>Departments Dismissed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>