sfdx-source/dx-training/main/objects/Account/fields/Dismissal_Creation_User__c.field-meta.xml
<CustomField>
    <fullName>Dismissal_Creation_User__c</fullName>
    <label>Dismissal Creation User</label>
    <length>100</length>
    <type>Text</type>
</CustomField>