sfdx-source/dx-training/main/objects/Account/fields/Dismissal_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Dismissal_End_Date__c</fullName>
    <label>Dismissal End Date</label>
    <type>Date</type>
</CustomField>