sfdx-source/dx-training/main/objects/Account/fields/Dismissal_Exception_Provider__c.field-meta.xml
<CustomField>
    <fullName>Dismissal_Exception_Provider__c</fullName>
    <label>Dismissal Exception Provider</label>
    <length>100</length>
    <type>Text</type>
</CustomField>