sfdx-source/dx-training/main/objects/Account/fields/Dismissal_Exception_Revenue_Location__c.field-meta.xml
<CustomField>
    <fullName>Dismissal_Exception_Revenue_Location__c</fullName>
    <label>Dismissal Exception Revenue Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>