sfdx-source/dx-training/main/objects/Account/fields/Dismissal_Exception_Service_Area__c.field-meta.xml
<CustomField>
    <fullName>Dismissal_Exception_Service_Area__c</fullName>
    <label>Dismissal Exception Service Area</label>
    <length>100</length>
    <type>Text</type>
</CustomField>