sfdx-source/dx-training/main/objects/Account/fields/Dismissal_Exception_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Dismissal_Exception_Specialty__c</fullName>
    <label>Dismissal Exception Specialty</label>
    <length>100</length>
    <type>Text</type>
</CustomField>