sfdx-source/dx-training/main/objects/Account/fields/Dismissal_Last_Edit_Instant__c.field-meta.xml
<CustomField>
    <fullName>Dismissal_Last_Edit_Instant__c</fullName>
    <label>Dismissal Last Edit Instant</label>
    <length>100</length>
    <type>Text</type>
</CustomField>