sfdx-source/dx-training/main/objects/Account/fields/Dismissal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Dismissal_Notes__c</fullName>
    <label>Dismissal Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>