sfdx-source/dx-training/main/objects/Account/fields/Dismissed__c.field-meta.xml
<CustomField>
    <fullName>Dismissed__c</fullName>
    <formula>IF(AND(ISBLANK( Centers_Dismissed__c ),NOT(ISBLANK(Providers_Dismissed__c)),NOT(ISBLANK(Specialties_Dismissed__c))),  Providers_Dismissed__c &amp; &quot;, &quot; &amp;  Specialties_Dismissed__c , 
IF ( AND (ISBLANK( Centers_Dismissed__c ),ISBLANK (Providers_Dismissed__c )), Specialties_Dismissed__c,
IF ( AND (ISBLANK( Centers_Dismissed__c ),ISBLANK (Specialties_Dismissed__c)), Providers_Dismissed__c,
IF ( AND(ISBLANK( Providers_Dismissed__c),NOT(ISBLANK(Centers_Dismissed__c )),NOT(ISBLANK(Specialties_Dismissed__c))),  Centers_Dismissed__c &amp; &quot;, &quot; &amp; Specialties_Dismissed__c,
IF ( AND (ISBLANK( Providers_Dismissed__c ),ISBLANK (Specialties_Dismissed__c )), Centers_Dismissed__c,
IF ( AND(ISBLANK( Specialties_Dismissed__c),NOT(ISBLANK(Centers_Dismissed__c)),NOT(ISBLANK(Providers_Dismissed__c))),  Centers_Dismissed__c &amp; &quot;, &quot; &amp; Providers_Dismissed__c,
IF ( AND (ISBLANK( Centers_Dismissed__c ),ISBLANK (Providers_Dismissed__c ),ISBLANK(Specialties_Dismissed__c)),&quot;test&quot;,Centers_Dismissed__c &amp; &quot;, &quot; &amp; Providers_Dismissed__c &amp; &quot;, &quot; &amp; Specialties_Dismissed__c )))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dismissed</label>
    <type>Text</type>
</CustomField>