sfdx-source/dx-training/main/objects/Account/fields/Dismissed_Centers__c.field-meta.xml
<CustomField>
    <fullName>Dismissed_Centers__c</fullName>
    <label>Dismissed Centers</label>
    <length>128</length>
    <type>Text</type>
</CustomField>