sfdx-source/dx-training/main/objects/Account/fields/Duke_Employee__c.field-meta.xml
<CustomField>
    <fullName>Duke_Employee__c</fullName>
    <label>Duke Employee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>