sfdx-source/dx-training/main/objects/Account/fields/Effective_Date_of_Dismissal__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_of_Dismissal__c</fullName>
    <label>Effective Date of Dismissal</label>
    <type>Date</type>
</CustomField>