sfdx-source/dx-training/main/objects/Account/fields/Email_preference__c.field-meta.xml
<CustomField>
    <fullName>Email_preference__c</fullName>
    <label>Email preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No, I prefer to not receive promotional information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>