sfdx-source/dx-training/main/objects/Account/fields/Email_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Verified_Date__c</fullName>
    <label>Email Verified Date</label>
    <type>Date</type>
</CustomField>