sfdx-source/dx-training/main/objects/Account/fields/Email_Verified_Days_Past__c.field-meta.xml
<CustomField>
    <fullName>Email_Verified_Days_Past__c</fullName>
    <formula>TODAY() - Email_Verified_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Verified Days Past</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>