sfdx-source/dx-training/main/objects/Account/fields/Emergency_Contact_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Relationship__c</fullName>
    <label>Emergency Contact Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Caregiver</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>