sfdx-source/dx-training/main/objects/Account/fields/Employer_City__c.field-meta.xml
<CustomField>
    <fullName>Employer_City__c</fullName>
    <label>Employer City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>