sfdx-source/dx-training/main/objects/Account/fields/Employer_State__c.field-meta.xml
<CustomField>
    <fullName>Employer_State__c</fullName>
    <label>Employer State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>