sfdx-source/dx-training/main/objects/Account/fields/Employer_ZIP__c.field-meta.xml
<CustomField>
    <fullName>Employer_ZIP__c</fullName>
    <label>Employer ZIP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>