sfdx-source/dx-training/main/objects/Account/fields/EmployerAddress__c.field-meta.xml
<CustomField>
    <fullName>EmployerAddress__c</fullName>
    <description>Not in HC</description>
    <label>Employer Address</label>
    <type>TextArea</type>
</CustomField>