sfdx-source/dx-training/main/objects/Account/fields/EmployerName__c.field-meta.xml
<CustomField>
    <fullName>EmployerName__c</fullName>
    <description>Not in HC</description>
    <label>Employer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>