sfdx-source/dx-training/main/objects/Account/fields/EmployerPhone__c.field-meta.xml
<CustomField>
    <fullName>EmployerPhone__c</fullName>
    <description>Not in HC</description>
    <label>Employer Phone</label>
    <type>Phone</type>
</CustomField>