sfdx-source/dx-training/main/objects/Account/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Part</fullName>
                <label>Part Time</label>
            </value>
            <value>
                <fullName>None</fullName>
                <label>Not Employed</label>
            </value>
            <value>
                <fullName>Self</fullName>
                <label>Self Employed</label>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Military</fullName>
                <label>On Active Military Duty</label>
            </value>
            <value>
                <fullName>STUDENT</fullName>
                <label>Student - Full Time</label>
            </value>
            <value>
                <fullName>STUDENT - PA</fullName>
                <label>Student - Part Time</label>
            </value>
            <value>
                <fullName>UNKNOWN</fullName>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>DISABLED</fullName>
                <label>Disabled</label>
            </value>
            <value>
                <fullName>Full</fullName>
                <label>Full Time</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>