sfdx-source/dx-training/main/objects/Account/fields/Employment_Status_Youreka__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status_Youreka__c</fullName>
    <label>Employment Status Youreka</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Part Time</fullName>
            </value>
            <value>
                <fullName>Not Employed</fullName>
            </value>
            <value>
                <fullName>Self Employed</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>On Active Military Duty</fullName>
            </value>
            <value>
                <fullName>Student - Full Time</fullName>
            </value>
            <value>
                <fullName>Student - Part Time</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <isActive>false</isActive>
                <label>Active</label>
            </value>
            <value>
                <fullName>In-Active</fullName>
                <isActive>false</isActive>
                <label>In-Active</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>