sfdx-source/dx-training/main/objects/Account/fields/Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity__c</fullName>
    <label>Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
                <label>Hispanic Mexican</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Hispanic Cuban</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Not Hispanic/Latino</label>
            </value>
            <value>
                <fullName>D</fullName>
                <default>true</default>
                <label>Not Reported/Declined</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>Hispanic Other</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Hispanic Puerto Rican</label>
            </value>
            <value>
                <fullName>Values TBD</fullName>
                <isActive>false</isActive>
                <label>Values TBD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>