sfdx-source/dx-training/main/objects/Account/fields/Ethnicity_Youreka__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity_Youreka__c</fullName>
    <label>Ethnicity Youreka</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hispanic Mexican</fullName>
            </value>
            <value>
                <fullName>Hispanic Cuban</fullName>
            </value>
            <value>
                <fullName>Not Hispanic/Latino</fullName>
            </value>
            <value>
                <fullName>Not Reported/Declined</fullName>
            </value>
            <value>
                <fullName>Hispanic Other</fullName>
            </value>
            <value>
                <fullName>Hispanic Puerto Rican</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
                <isActive>false</isActive>
                <label>Declined</label>
            </value>
            <value>
                <fullName>Not Reported</fullName>
                <isActive>false</isActive>
                <label>Not Reported</label>
            </value>
            <value>
                <fullName>Values TBD</fullName>
                <isActive>false</isActive>
                <label>Values TBD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>