sfdx-source/dx-training/main/objects/Account/fields/FYI_Flag__c.field-meta.xml
<CustomField>
    <fullName>FYI_Flag__c</fullName>
    <label>FYI Flag</label>
    <length>64</length>
    <type>Text</type>
</CustomField>