sfdx-source/dx-training/main/objects/Account/fields/FYI_Flag_Contact__c.field-meta.xml
<CustomField>
    <fullName>FYI_Flag_Contact__c</fullName>
    <label>FYI Flag Contact</label>
    <length>64</length>
    <type>Text</type>
</CustomField>