sfdx-source/dx-training/main/objects/Account/fields/FYI_Flag_Date__c.field-meta.xml
<CustomField>
    <fullName>FYI_Flag_Date__c</fullName>
    <label>FYI Flag Date</label>
    <length>64</length>
    <type>Text</type>
</CustomField>