sfdx-source/dx-training/main/objects/Account/fields/FYI_Flag_Status__c.field-meta.xml
<CustomField>
    <fullName>FYI_Flag_Status__c</fullName>
    <label>FYI Flag Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>