sfdx-source/dx-training/main/objects/Account/fields/FYI_Flag_Summary__c.field-meta.xml
<CustomField>
    <fullName>FYI_Flag_Summary__c</fullName>
    <label>FYI Flag Summary</label>
    <length>80</length>
    <type>Text</type>
</CustomField>