sfdx-source/dx-training/main/objects/Account/fields/FYI_Flag_Time__c.field-meta.xml
<CustomField>
    <fullName>FYI_Flag_Time__c</fullName>
    <label>FYI Flag Time</label>
    <length>80</length>
    <type>Text</type>
</CustomField>