sfdx-source/dx-training/main/objects/Account/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
                <label>Male</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Female</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>ND</fullName>
                <isActive>false</isActive>
                <label>Choose not to disclose</label>
            </value>
            <value>
                <fullName>GFQ</fullName>
                <isActive>false</isActive>
                <label>Gender Fluid/Queer</label>
            </value>
            <value>
                <fullName>NB</fullName>
                <isActive>false</isActive>
                <label>Non Binary</label>
            </value>
            <value>
                <fullName>OTH</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>MTF</fullName>
                <isActive>false</isActive>
                <label>Transgender Female/Male-to-Female</label>
            </value>
            <value>
                <fullName>FTM</fullName>
                <isActive>false</isActive>
                <label>Transgender Male/Female-to-Male</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>