sfdx-source/dx-training/main/objects/Account/fields/Gender_Identity_Youreka__c.field-meta.xml
<CustomField>
    <fullName>Gender_Identity_Youreka__c</fullName>
    <label>Gender Identity Youreka</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Transgender Female/Male-to-Female</fullName>
            </value>
            <value>
                <fullName>Transgender Male/Female-to-Male</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Choose not to disclose</fullName>
            </value>
            <value>
                <fullName>Gender Fluid/Queer</fullName>
            </value>
            <value>
                <fullName>Non Binary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>