sfdx-source/dx-training/main/objects/Account/fields/Guarantor_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Billing_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guarantor Billing Address</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Guarantor Billing Address)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>