sfdx-source/dx-training/main/objects/Account/fields/Guarantor_Verified__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guarantor Verified</label>
    <type>Checkbox</type>
</CustomField>