sfdx-source/dx-training/main/objects/Account/fields/Guarantor_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Verified_Date__c</fullName>
    <label>Guarantor Verified Date</label>
    <type>Date</type>
</CustomField>