sfdx-source/dx-training/main/objects/Account/fields/Handicap__c.field-meta.xml
<CustomField>
    <fullName>Handicap__c</fullName>
    <label>Handicap</label>
    <length>22</length>
    <type>Text</type>
</CustomField>