sfdx-source/dx-training/main/objects/Account/fields/Hard_Lock_Record__c.field-meta.xml
<CustomField>
    <fullName>Hard_Lock_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hard Lock Record so no one can access it.</description>
    <label>Hard Lock Record?</label>
    <type>Checkbox</type>
</CustomField>