sfdx-source/dx-training/main/objects/Account/fields/Has_Active_CFS_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Has_Active_CFS_Referrals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Active CFS Referrals</label>
    <type>Checkbox</type>
</CustomField>