sfdx-source/dx-training/main/objects/Account/fields/Has_International_Guarantor_Formula__c.field-meta.xml
<CustomField>
    <fullName>Has_International_Guarantor_Formula__c</fullName>
    <formula>Has_International_Guarantor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has International Guarantor Formula</label>
    <type>Checkbox</type>
</CustomField>