sfdx-source/dx-training/main/objects/Account/fields/Has_International_Referral__c.field-meta.xml
<CustomField>
    <fullName>Has_International_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has International Referral</label>
    <type>Checkbox</type>
</CustomField>